--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -676,7 +676,9 @@ http://www.raspbian.org/
 http://www.softwareok.de/?seite=faq-System-Allgemein&faq=13
 http://de.wikipedia.org/wiki/ARM-Architektur
 http://www.rn-wissen.de/index.php/Raspberry_PI:_GPIO
+http://www.raspberrypi.org/faqs <- bild Rasp
+http://www.euron.org/maps/germany <- bild Volksbot
 
 \end{verbatim}
-
+%TODO überall quellen angeben
 \end{document}
